Configurations advanced but not functional, documentation in swagger not completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,25 @@
 spring.application.name=URLShorter
+server.port=8080
+spring.data.mongodb.uri=mongodb://${DB_HOST:localhost}:${MONGO_PORT:27017}/${DB_NAME:url_shortener}
 
-spring.data.mongodb.uri=mongodb+srv://lopezsdev:<db_password>@cluster0.ufba9ru.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# DevTools configuration
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+
+# Actuator metrics
+management.endpoints.web.exposure.include=*
+
+# Redis configuration
+spring.data.redis.host=redis
+spring.data.redis.port=6379
+
+# Swagger configuration
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+logging.level.org.springdoc=DEBUG
+
+
+
