--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,14 +12,11 @@ management.endpoints.web.exposure.include=*
 # Redis configuration
 spring.data.redis.host=redis
 spring.data.redis.port=6379
+spring.data.redis.repositories.enabled=false
 
 # Swagger configuration
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
 
 logging.level.org.springdoc=DEBUG
-
-
-
