Rate limiting, filter only https request, and denied certain domains configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.data.redis.repositories.enabled=false
 # Swagger configuration
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-springdoc.api-docs.path=/v3/api-docs
+springdoc.api-docs.path=/v3/api-docs #interfaz html: http://localhost:8080/swagger-ui/index.html
 
 logging.level.org.springdoc=DEBUG
