--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   mongo:
     image: mongo:latest
@@ -34,6 +32,9 @@ services:
       - DB_HOST=mongo-db
       - DB_NAME=url_shortener
       - MONGO_PORT=27017
+      - SAFE_BROWSING_API_KEY=${SAFE_BROWSING_API_KEY}
+    env_file:
+      - .env
 
 volumes:
   mongo-data:
